[package]
name = "clinvar"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.18"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
# bin dependencies
flate2 = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
structopt = "0.3"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
